--- a/src/exercises/01.md
+++ b/src/exercises/01.md
@@ -1,13 +1,62 @@
-# 01 - TODO
+# 01 - useMemo for expensive calculations
 
 ## Background
 
-TODO
+React hooks are amazing. Being able to put all the logic and state management
+within a function component (the "render method" equivalent for a class) allows
+for mind blowing composability.
+
+This power comes with an unfortunate limitation that calculations performed
+within render will be performed every single render, regardless of whether the
+inputs for the calculations change. For example:
+
+```jsx
+function Distance({x, y}) {
+  const distance = calculateDistance(x, y)
+  return (
+    <div>
+      The distance between {x} and {y} is {distance}.
+    </div>
+  )
+}
+```
+
+If that component's parent re-renders, or if we add some unrelated state to the
+component and trigger a re-render, we'll be calling `calculateDistance` every
+render which could lead to a performance bottleneck.
+
+This is why we have the `useMemo` hook from React:
+
+```jsx
+function Distance({x, y}) {
+  const distance = React.useMemo(() => calculateDistance(x, y), [x, y])
+  return (
+    <div>
+      The distance between {x} and {y} is {distance}.
+    </div>
+  )
+}
+```
+
+This allows us to put that calculation behind a function which is only called
+when the result actually needs to be re-evaluated (when the dependencies
+change). In the example above the array `[x, y]` are called "dependencies" and
+React knows that so long as those do not change, the result of our function will
+be the same as the last time the function was called.
 
 ## Exercise
 
-TODO
+We have a `Menu` component that's calling a `getItems` function every render.
+This function is really slow because it's attempting to sort thousands of items
+based on the user's filter input.
 
-## Extra Credit
+Your job is to improve performance by wrapping `getItems` in `React.useMemo`.
 
-### 💯 TODO
+To observe the performance problem with `getItems`, open the Chrome DevTools
+"Performance" tab, click the settings gear and set CPU from "no throttling" to
+"6x slowdown." Then select any item from the dropdown. Next, click the "Record"
+circle icon in the devtools to start a recording. Then click on "force rerender"
+and then click the "Record" circle again to stop the recording. You'll notice
+that `getItems` was called when it should not have been (and it took a LONG time
+to run). Your goal is to make it so `getItems` is only called when the filter
+changes.
