awesome extra credit for 01

--- a/src/exercises/01.md
+++ b/src/exercises/01.md
@@ -60,3 +60,36 @@ and then click the "Record" circle again to stop the recording. You'll notice
 that `getItems` was called when it should not have been (and it took a LONG time
 to run). Your goal is to make it so `getItems` is only called when the filter
 changes.
+
+## Extra Credit
+
+### 💯 Speed up the search
+
+> Warning, this one's _really_ cool, but kinda tricky...
+
+It's awesome that we reduced how often we have to call `getItems`,
+unfortunately, on low-powered devices, `getItems` is still quite slow when it
+actually _does_ need to run and we'd like to speed it up. So the product manager
+🕴 decided that we need to ditch `match-sorter` in favor of a simple string
+`includes` because the experience is not fast enough (even though `match-sorter`
+does provide a much superior UX). "No!" You argue. "We must have the better UX!"
+There may be ways to optimize `match-sorter` itself, but let's try throwing this
+all into a web worker instead...
+
+Since you've got some extra time, see if you can figure out how to put
+`filter-cities.js` into a web worker. (💰 You don't need to make many changes,
+and _all_ of your changes will be in your exercise file).
+
+Because working with web workers is asynchronous, you'll probably want to use
+the `useAsync` utility found in `src/utils.js` (💰 take a peak. It has an
+example for how to use it).
+
+Another thing that can help you a bunch is
+[`workerize-loader`](https://github.com/developit/workerize-loader) which is
+pre-installed into this project. The example should be enough to get you going.
+There's one small problem however. `workerize-loader` doesn't work with
+create-react-app's development server at the moment
+([support is in progress](https://github.com/facebook/create-react-app/issues/7741)).
+So you can either run `npm run build` followed by `npx serve -s build` to test
+this out or you can edit `./node_modules/react-scripts/config/webpack.config.js`
+to set `output.globalObject` to `'this'`.
