good progress. exercise 2 is done

--- a/src/exercises/01.md
+++ b/src/exercises/01.md
@@ -63,7 +63,7 @@ changes.
 
 ## Extra Credit
 
-### 💯 Speed up the search
+### 💯 Put getItems into a Web Worker
 
 > Warning, this one's _really_ cool, but kinda tricky...
 
