--- a/src/exercises/03.md
+++ b/src/exercises/03.md
@@ -1,13 +1,123 @@
-# 03 - TODO
+# 03 - Window large lists with react-window
 
 ## Background
 
-TODO
+Here's what happens when there's a state update in your app:
+
+```
+render → reconcilitation → commit
+      ↖                   ↙
+           state change
+```
+
+Let's define a few terms:
+
+- The "render" phase: create React elements React.createElement
+- The "reconciliation" phase: compare previous elements with the new ones
+- The "commit" phase: update the DOM (if needed).
+
+React exists in its current form (in large part) because updating the DOM is the
+slowest part of this process. By separating us from the DOM, React can perform
+the most surgically optimal updates to the DOM to speed things up for us
+big-time.
+
+Unfortunately, there's not much React can do if you simply need to make **huge**
+updates to the DOM. And as fast as React is in the reconciliation phase, if it
+has to do that for tens of thousands of elements that's going to take some time
+("perf death by a thousand cuts"). In addition, our own code that runs during
+the "render" phase may be fast, but if you have to do that tens of thousands of
+times, you're going to have a hard time being fast on low-end devices.
+
+There's no UI that reveals these problems more than dataviz, grids, tables, and
+lists with lots of data. There's only so much you can do before we have to
+conclude that we're simply running too much code (or running the same small
+amount of code too many times).
+
+But here's the trick. Often you don't need to actually display tens of thousands
+of list items, table cells, or data points to users. So if that content isn't
+displayed, then you can kinda cheat by doing some "lazy" just-in-time rendering.
+
+So let's say you had a grid of data that rendered 100 columns and had 5000 rows.
+Do you really need to render all 500000 cells for the user all at once? They
+certainly wont see or be able to interact with all of that information at once.
+You'll only display a "window" of 10 columns by 20 rows (so 200 cells for
+example), and the rest you can delay rendering until the user starts scrolling
+around the grid.
+
+Maybe you can render a few cells outside the view just in case they're a really
+fast scroller. In any case, you'll save yourself a LOT of computational power by
+doing this "lazy" just-in-time rendering.
+
+This is a concept called "windowing" and in some cases it can really speed up
+your components that render lots of data. There are various libraries in the
+React ecosystem for solving this problem. My personal favorite is called
+`react-window`. Here's an example of how you would adapt a list to use
+`react-window`'s `FixedSizeList` component:
+
+```jsx
+// before
+function MyListOfData({items}) {
+  return (
+    <ul>
+      {items.map(item => (
+        <li key={item.id}>{item.name}</li>
+      ))}
+    </ul>
+  )
+}
+```
+
+```jsx
+// after
+function MyListOfData({items}) {
+  return (
+    <ul>
+      <FixedSizeList
+        width={300}
+        height={300}
+        itemCount={items.length}
+        itemSize={20}
+        itemData={{items}}
+      >
+        {ListItem}
+      </FixedSizeList>
+    </ul>
+  )
+}
+
+function ListItem({data, style, index}) {
+  const {items} = data
+  return <li style={style}>{items[index].name}</li>
+}
+```
+
+In summary, rather than iterating over all the items in your list, you simply
+tell `FixedSizeList` how many rows are in your list, what size they are, and
+then it will render the `ListItem` (the component you pass as the children prop)
+that number of times with that amount of space, but it will do so lazily. You
+can provide your own `itemData` which will be passed to your `ListItem`
+component as the `data` prop.
+
+react-window has some really awesome capabilities for all sorts of lists
+(including variable sizes and grids). Definitely give it a look to speed up your
+lists.
 
 ## Exercise
 
-TODO
+🕴 The product manager noticed that we're only rendering the top 100 matches and
+they're frustrated because they like scrolling for eternity. We tried to explain
+to them about React's reconciliation and commit phases, but they just smiled,
+gave us a high five and said "You're smart! I'm sure you can do this!"
 
-## Extra Credit
+So in this exercise, we've removed the `items.slice(0, 100)` and now we're
+rendering all the items. Even without throttling your CPU, you should notice a
+serious performance problem here any time there's any render of any kind. Go
+ahead and try doing some profiling if you like, but I think you know what you
+need to do. You need to window this stuff! Run less code, and speed up your
+component.
 
-### 💯 TODO
+Note that 💰 Marty the Money Bag has done a tiny bit of work for you that's
+specific to how you integrate Downshift and react-window. He's done a good job
+documenting what he's done so you can read about the changes he made if you
+want. 🐨 Kody the Koala Bear will be there to help you know what changes you
+need to make. Good luck!
