add codesplitting file

--- a/src/exercises/01.md
+++ b/src/exercises/01.md
@@ -1,95 +1,5 @@
-# 01 - useMemo for expensive calculations
+# Code splitting
 
 ## Background
 
-React hooks are amazing. Being able to put all the logic and state management
-within a function component (the "render method" equivalent for a class) allows
-for mind blowing composability.
-
-This power comes with an unfortunate limitation that calculations performed
-within render will be performed every single render, regardless of whether the
-inputs for the calculations change. For example:
-
-```jsx
-function Distance({x, y}) {
-  const distance = calculateDistance(x, y)
-  return (
-    <div>
-      The distance between {x} and {y} is {distance}.
-    </div>
-  )
-}
-```
-
-If that component's parent re-renders, or if we add some unrelated state to the
-component and trigger a re-render, we'll be calling `calculateDistance` every
-render which could lead to a performance bottleneck.
-
-This is why we have the `useMemo` hook from React:
-
-```jsx
-function Distance({x, y}) {
-  const distance = React.useMemo(() => calculateDistance(x, y), [x, y])
-  return (
-    <div>
-      The distance between {x} and {y} is {distance}.
-    </div>
-  )
-}
-```
-
-This allows us to put that calculation behind a function which is only called
-when the result actually needs to be re-evaluated (when the dependencies
-change). In the example above the array `[x, y]` are called "dependencies" and
-React knows that so long as those do not change, the result of our function will
-be the same as the last time the function was called.
-
 ## Exercise
-
-We have a `Menu` component that's calling a `getItems` function every render.
-This function is really slow because it's attempting to sort thousands of items
-based on the user's filter input.
-
-Your job is to improve performance by wrapping `getItems` in `React.useMemo`.
-
-To observe the performance problem with `getItems`, open the Chrome DevTools
-"Performance" tab, click the settings gear and set CPU from "no throttling" to
-"6x slowdown." Then select any item from the dropdown. Next, click the "Record"
-circle icon in the devtools to start a recording. Then click on "force rerender"
-and then click the "Record" circle again to stop the recording. You'll notice
-that `getItems` was called when it should not have been (and it took a LONG time
-to run). Your goal is to make it so `getItems` is only called when the filter
-changes.
-
-## Extra Credit
-
-### 💯 Put getItems into a Web Worker
-
-> Warning, this one's _really_ cool, but kinda tricky...
-
-It's awesome that we reduced how often we have to call `getItems`,
-unfortunately, on low-powered devices, `getItems` is still quite slow when it
-actually _does_ need to run and we'd like to speed it up. So the product manager
-🕴 decided that we need to ditch `match-sorter` in favor of a simple string
-`includes` because the experience is not fast enough (even though `match-sorter`
-does provide a much superior UX). "No!" You argue. "We must have the better UX!"
-There may be ways to optimize `match-sorter` itself, but let's try throwing this
-all into a web worker instead...
-
-Since you've got some extra time, see if you can figure out how to put
-`filter-cities.js` into a web worker. (💰 You don't need to make many changes,
-and _all_ of your changes will be in your exercise file).
-
-Because working with web workers is asynchronous, you'll probably want to use
-the `useAsync` utility found in `src/utils.js` (💰 take a peak. It has an
-example for how to use it).
-
-Another thing that can help you a bunch is
-[`workerize-loader`](https://github.com/developit/workerize-loader) which is
-pre-installed into this project. The example should be enough to get you going.
-There's one small problem however. `workerize-loader` doesn't work with
-create-react-app's development server at the moment
-([support is in progress](https://github.com/facebook/create-react-app/issues/7741)).
-So you can either run `npm run build` followed by `npx serve -s build` to test
-this out or you can edit `./node_modules/react-scripts/config/webpack.config.js`
-to set `output.globalObject` to `'this'`.
