--- a/src/exercises/02.md
+++ b/src/exercises/02.md
@@ -1,146 +1,95 @@
-# 02 - React.memo for reducing unnecessary re-renders
+# useMemo for expensive calculations
 
 ## Background
 
-Here's the lifecycle of a React app:
+React hooks are amazing. Being able to put all the logic and state management
+within a function component (the "render method" equivalent for a class) allows
+for mind blowing composability.
 
-```
-→  render → reconcilitation → commit
-         ↖                   ↙
-              state change
-```
-
-Let's define a few terms:
-
-- The "render" phase: create React elements React.createElement
-- The "reconciliation" phase: compare previous elements with the new ones
-- The "commit" phase: update the DOM (if needed).
-
-React exists in its current form (in large part) because updating the DOM is the
-slowest part of this process. By separating us from the DOM, React can perform
-the most surgically optimal updates to the DOM to speed things up for us
-big-time.
-
-A React Component can re-render for any of the following reasons:
-
-1. Its props change
-2. Its internal state changes
-3. It is consuming context values which have changed
-4. Its parent re-renders
-
-React is really fast, however, _sometimes_ it can be useful to give React little
-tips about certain parts of the React tree when there's a state update. You can
-opt-out of state updates for a part of the React tree by using one of React's
-built-in rendering bail-out utilities: `React.PureComponent`, `React.memo`, or
-`shouldComponentUpdate`.
-
-I want to emphasize that I've seen many projects make the mistake of using these
-utilities as band-aids over more problematic performance problems in their apps.
-Please read more about this in my blog post:
-[Fix the slow render before you fix the re-render](https://kentcdodds.com/blog/fix-the-slow-render-before-you-fix-the-re-render).
-
-Let's look at an example to learn how this works. You can pull this example up
-at http://localhost:3000/isolated/examples/unnecessary-rerenders (and feel free
-to play with it in `src/examples/unnecessary-rerenders.js`). Pull this up and
-profile it with the React DevTools.
+This power comes with an unfortunate limitation that calculations performed
+within render will be performed every single render, regardless of whether the
+inputs for the calculations change. For example:
 
 ```jsx
-function CountButton({count, onClick}) {
-  return <button onClick={onClick}>{count}</button>
-}
-
-function NameInput({name, onNameChange}) {
-  return (
-    <label>
-      Name: <input value={name} onChange={e => onNameChange(e.target.value)} />
-    </label>
-  )
-}
-
-function Example() {
-  const [name, setName] = React.useState('')
-  const [count, setCount] = React.useState(0)
-  const increment = () => setCount(c => c + 1)
+function Distance({x, y}) {
+  const distance = calculateDistance(x, y)
   return (
     <div>
-      <div>
-        <CountButton count={count} onClick={increment} />
-      </div>
-      <div>
-        <NameInput name={name} onNameChange={setName} />
-      </div>
-      {name ? <div>{`${name}'s favorite number is ${count}`}</div> : null}
+      The distance between {x} and {y} is {distance}.
     </div>
   )
 }
 ```
 
-Based on how this is implemented, when you click on the counter button, the
-`<CountButton />` re-renders (so we can update the `count` value). But the
-`<NameInput />` is also re-rendered. If you have
-`Record why each component rendered while profiling.` enabled in React DevTools,
-then you'll see that under "Why did this render?" it says "The parent component
-rendered."
+If that component's parent re-renders, or if we add some unrelated state to the
+component and trigger a re-render, we'll be calling `calculateDistance` every
+render which could lead to a performance bottleneck.
 
-React does this because it has no way of knowing whether the NameInput will need
-to return different React elements based on the state change of it's parent. In
-our case there were no changes necessary, so React didn't bother updating the
-DOM. This is what's called an "unnecessary rerender" and if that
-render/reconciliation process is expensive, then it can be worthwhile to prevent
-it.
-
-Using one of the bail-out APIs, you can instruct React when to re-render.
-`React.PureComponent` is for class components and `React.memo` is for function
-components and they do basically the same thing by default. They make it so your
-component will not re-render simply because its parent re-rendered which could
-improve the performance of your app overall.
-
-So here's how we can improve our example:
+This is why we have the `useMemo` hook from React:
 
 ```jsx
-const CountButton = React.memo(function CountButton({count, onClick}) {
-  return <button onClick={onClick}>{count}</button>
-})
-
-const NameInput = React.memo(function NameInput({name, onNameChange}) {
+function Distance({x, y}) {
+  const distance = React.useMemo(() => calculateDistance(x, y), [x, y])
   return (
-    <label>
-      Name: <input value={name} onChange={e => onNameChange(e.target.value)} />
-    </label>
+    <div>
+      The distance between {x} and {y} is {distance}.
+    </div>
   )
-})
-
-// etc... no other changes necessary
+}
 ```
 
-If you try that out, then you'll notice the `<NameInput />` no longer re-renders
-when you click on the counter button, saving React the work of having to call
-the `NameInput` function and compare the previous react elements with the new
-ones.
-
-Again, I want to mention that people can make the mistake of wrapping
-_everything_ in `React.memo` which can actually slow down your app in some cases
-and in all cases it makes your code more complex. So it's much better to use it
-more intentionally and further, there are other things you can do to reduce the
-amount of unnecessary re-renders throughout your application (which we'll talk
-about more later).
+This allows us to put that calculation behind a function which is only called
+when the result actually needs to be re-evaluated (when the dependencies
+change). In the example above the array `[x, y]` are called "dependencies" and
+React knows that so long as those do not change, the result of our function will
+be the same as the last time the function was called.
 
 ## Exercise
 
-In this exercise, pull up the React DevTools and observe when you click the
-"force rerender" button, the `Downshift`, `Menu`, and `ListItem` components are
-all re-rendered even though no DOM updates were needed. This is an unnecessary
-re-render and a bottleneck in our application (especially if we want to start
-showing all of the results rather than just the first 100... I've heard rumors
-that the product manager 🕴 wants us to do that). If you enable 6x throttle on
-the CPU (under the Performance tab in Chrome DevTools) then you'll notice the
-issue is more stark.
+We have a `Menu` component that's calling a `getItems` function every render.
+This function is really slow because it's attempting to sort thousands of items
+based on the user's filter input.
 
-Your job is to optimize the `Menu` and `ListItem` components to be memoized via
-`React.memo`. Make note of the before/after render times.
+Your job is to improve performance by wrapping `getItems` in `React.useMemo`.
 
-### 💯 Memoize the Downshift component
+To observe the performance problem with `getItems`, open the Chrome DevTools
+"Performance" tab, click the settings gear and set CPU from "no throttling" to
+"6x slowdown." Then select any item from the dropdown. Next, click the "Record"
+circle icon in the devtools to start a recording. Then click on "force rerender"
+and then click the "Record" circle again to stop the recording. You'll notice
+that `getItems` was called when it should not have been (and it took a LONG time
+to run). Your goal is to make it so `getItems` is only called when the filter
+changes.
 
-This one's a little trickier, but the Downshift library is not using
-`React.memo` or `PureComponent`. See if you can figure out how to optimize it
-anyway.
+## Extra Credit
+
+### 💯 Put getItems into a Web Worker
+
+> Warning, this one's _really_ cool, but kinda tricky...
+
+It's awesome that we reduced how often we have to call `getItems`,
+unfortunately, on low-powered devices, `getItems` is still quite slow when it
+actually _does_ need to run and we'd like to speed it up. So the product manager
+🕴 decided that we need to ditch `match-sorter` in favor of a simple string
+`includes` because the experience is not fast enough (even though `match-sorter`
+does provide a much superior UX). "No!" You argue. "We must have the better UX!"
+There may be ways to optimize `match-sorter` itself, but let's try throwing this
+all into a web worker instead...
+
+Since you've got some extra time, see if you can figure out how to put
+`filter-cities.js` into a web worker. (💰 You don't need to make many changes,
+and _all_ of your changes will be in your exercise file).
+
+Because working with web workers is asynchronous, you'll probably want to use
+the `useAsync` utility found in `src/utils.js` (💰 take a peak. It has an
+example for how to use it).
+
+Another thing that can help you a bunch is
+[`workerize-loader`](https://github.com/developit/workerize-loader) which is
+pre-installed into this project. The example should be enough to get you going.
+There's one small problem however. `workerize-loader` doesn't work with
+create-react-app's development server at the moment
+([support is in progress](https://github.com/facebook/create-react-app/issues/7741)).
+So you can either run `npm run build` followed by `npx serve -s build` to test
+this out or you can edit `./node_modules/react-scripts/config/webpack.config.js`
+to set `output.globalObject` to `'this'`.
