--- a/src/exercises/03.md
+++ b/src/exercises/03.md
@@ -1,13 +1,13 @@
-# 03 - Window large lists with react-window
+# React.memo for reducing unnecessary re-renders
 
 ## Background
 
-Here's what happens when there's a state update in your app:
+Here's the lifecycle of a React app:
 
 ```
-render → reconcilitation → commit
-      ↖                   ↙
-           state change
+→  render → reconcilitation → commit
+         ↖                   ↙
+              state change
 ```
 
 Let's define a few terms:
@@ -21,103 +21,126 @@ slowest part of this process. By separating us from the DOM, React can perform
 the most surgically optimal updates to the DOM to speed things up for us
 big-time.
 
-Unfortunately, there's not much React can do if you simply need to make **huge**
-updates to the DOM. And as fast as React is in the reconciliation phase, if it
-has to do that for tens of thousands of elements that's going to take some time
-("perf death by a thousand cuts"). In addition, our own code that runs during
-the "render" phase may be fast, but if you have to do that tens of thousands of
-times, you're going to have a hard time being fast on low-end devices.
+A React Component can re-render for any of the following reasons:
 
-There's no UI that reveals these problems more than dataviz, grids, tables, and
-lists with lots of data. There's only so much you can do before we have to
-conclude that we're simply running too much code (or running the same small
-amount of code too many times).
+1. Its props change
+2. Its internal state changes
+3. It is consuming context values which have changed
+4. Its parent re-renders
 
-But here's the trick. Often you don't need to actually display tens of thousands
-of list items, table cells, or data points to users. So if that content isn't
-displayed, then you can kinda cheat by doing some "lazy" just-in-time rendering.
+React is really fast, however, _sometimes_ it can be useful to give React little
+tips about certain parts of the React tree when there's a state update. You can
+opt-out of state updates for a part of the React tree by using one of React's
+built-in rendering bail-out utilities: `React.PureComponent`, `React.memo`, or
+`shouldComponentUpdate`.
 
-So let's say you had a grid of data that rendered 100 columns and had 5000 rows.
-Do you really need to render all 500000 cells for the user all at once? They
-certainly wont see or be able to interact with all of that information at once.
-You'll only display a "window" of 10 columns by 20 rows (so 200 cells for
-example), and the rest you can delay rendering until the user starts scrolling
-around the grid.
+I want to emphasize that I've seen many projects make the mistake of using these
+utilities as band-aids over more problematic performance problems in their apps.
+Please read more about this in my blog post:
+[Fix the slow render before you fix the re-render](https://kentcdodds.com/blog/fix-the-slow-render-before-you-fix-the-re-render).
 
-Maybe you can render a few cells outside the view just in case they're a really
-fast scroller. In any case, you'll save yourself a LOT of computational power by
-doing this "lazy" just-in-time rendering.
-
-This is a concept called "windowing" and in some cases it can really speed up
-your components that render lots of data. There are various libraries in the
-React ecosystem for solving this problem. My personal favorite is called
-`react-window`. Here's an example of how you would adapt a list to use
-`react-window`'s `FixedSizeList` component:
+Let's look at an example to learn how this works. You can pull this example up
+at http://localhost:3000/isolated/examples/unnecessary-rerenders (and feel free
+to play with it in `src/examples/unnecessary-rerenders.js`). Pull this up and
+profile it with the React DevTools.
 
 ```jsx
-// before
-function MyListOfData({items}) {
+function CountButton({count, onClick}) {
+  return <button onClick={onClick}>{count}</button>
+}
+
+function NameInput({name, onNameChange}) {
   return (
-    <ul>
-      {items.map(item => (
-        <li key={item.id}>{item.name}</li>
-      ))}
-    </ul>
+    <label>
+      Name: <input value={name} onChange={e => onNameChange(e.target.value)} />
+    </label>
+  )
+}
+
+function Example() {
+  const [name, setName] = React.useState('')
+  const [count, setCount] = React.useState(0)
+  const increment = () => setCount(c => c + 1)
+  return (
+    <div>
+      <div>
+        <CountButton count={count} onClick={increment} />
+      </div>
+      <div>
+        <NameInput name={name} onNameChange={setName} />
+      </div>
+      {name ? <div>{`${name}'s favorite number is ${count}`}</div> : null}
+    </div>
   )
 }
 ```
 
-```jsx
-// after
-function MyListOfData({items}) {
-  return (
-    <ul>
-      <FixedSizeList
-        width={300}
-        height={300}
-        itemCount={items.length}
-        itemSize={20}
-        itemData={{items}}
-      >
-        {ListItem}
-      </FixedSizeList>
-    </ul>
-  )
-}
+Based on how this is implemented, when you click on the counter button, the
+`<CountButton />` re-renders (so we can update the `count` value). But the
+`<NameInput />` is also re-rendered. If you have
+`Record why each component rendered while profiling.` enabled in React DevTools,
+then you'll see that under "Why did this render?" it says "The parent component
+rendered."
 
-function ListItem({data, style, index}) {
-  const {items} = data
-  return <li style={style}>{items[index].name}</li>
-}
+React does this because it has no way of knowing whether the NameInput will need
+to return different React elements based on the state change of it's parent. In
+our case there were no changes necessary, so React didn't bother updating the
+DOM. This is what's called an "unnecessary rerender" and if that
+render/reconciliation process is expensive, then it can be worthwhile to prevent
+it.
+
+Using one of the bail-out APIs, you can instruct React when to re-render.
+`React.PureComponent` is for class components and `React.memo` is for function
+components and they do basically the same thing by default. They make it so your
+component will not re-render simply because its parent re-rendered which could
+improve the performance of your app overall.
+
+So here's how we can improve our example:
+
+```jsx
+const CountButton = React.memo(function CountButton({count, onClick}) {
+  return <button onClick={onClick}>{count}</button>
+})
+
+const NameInput = React.memo(function NameInput({name, onNameChange}) {
+  return (
+    <label>
+      Name: <input value={name} onChange={e => onNameChange(e.target.value)} />
+    </label>
+  )
+})
+
+// etc... no other changes necessary
 ```
 
-In summary, rather than iterating over all the items in your list, you simply
-tell `FixedSizeList` how many rows are in your list, what size they are, and
-then it will render the `ListItem` (the component you pass as the children prop)
-that number of times with that amount of space, but it will do so lazily. You
-can provide your own `itemData` which will be passed to your `ListItem`
-component as the `data` prop.
+If you try that out, then you'll notice the `<NameInput />` no longer re-renders
+when you click on the counter button, saving React the work of having to call
+the `NameInput` function and compare the previous react elements with the new
+ones.
 
-react-window has some really awesome capabilities for all sorts of lists
-(including variable sizes and grids). Definitely give it a look to speed up your
-lists.
+Again, I want to mention that people can make the mistake of wrapping
+_everything_ in `React.memo` which can actually slow down your app in some cases
+and in all cases it makes your code more complex. So it's much better to use it
+more intentionally and further, there are other things you can do to reduce the
+amount of unnecessary re-renders throughout your application (which we'll talk
+about more later).
 
 ## Exercise
 
-🕴 The product manager noticed that we're only rendering the top 100 matches and
-they're frustrated because they like scrolling for eternity. We tried to explain
-to them about React's reconciliation and commit phases, but they just smiled,
-gave us a high five and said "You're smart! I'm sure you can do this!"
+In this exercise, pull up the React DevTools and observe when you click the
+"force rerender" button, the `Downshift`, `Menu`, and `ListItem` components are
+all re-rendered even though no DOM updates were needed. This is an unnecessary
+re-render and a bottleneck in our application (especially if we want to start
+showing all of the results rather than just the first 100... I've heard rumors
+that the product manager 🕴 wants us to do that). If you enable 6x throttle on
+the CPU (under the Performance tab in Chrome DevTools) then you'll notice the
+issue is more stark.
 
-So in this exercise, we've removed the `items.slice(0, 100)` and now we're
-rendering all the items. Even without throttling your CPU, you should notice a
-serious performance problem here any time there's any render of any kind. Go
-ahead and try doing some profiling if you like, but I think you know what you
-need to do. You need to window this stuff! Run less code, and speed up your
-component.
+Your job is to optimize the `Menu` and `ListItem` components to be memoized via
+`React.memo`. Make note of the before/after render times.
 
-Note that 💰 Marty the Money Bag has done a tiny bit of work for you that's
-specific to how you integrate Downshift and react-window. He's done a good job
-documenting what he's done so you can read about the changes he made if you
-want. 🐨 Kody the Koala Bear will be there to help you know what changes you
-need to make. Good luck!
+### 💯 Memoize the Downshift component
+
+This one's a little trickier, but the Downshift library is not using
+`React.memo` or `PureComponent`. See if you can figure out how to optimize it
+anyway.
