--- a/src/exercises/01.md
+++ b/src/exercises/01.md
@@ -2,4 +2,9 @@
 
 ## Background
 
+Code splitting acts on the principle that loading less code will speed up your
+app. Say for example that we're building a complex dashboard application that
+includes the venerable d3 library for graphing data. Your users start
+complaining because it takes too long to load the login screen.
+
 ## Exercise
