--- a/src/exercises/07.md
+++ b/src/exercises/07.md
@@ -4,6 +4,10 @@
 
 TODO
 
+> NOTE: The isolated functionality currently has a bug. Subscribe to this to
+> know when that's resolved:
+> https://github.com/facebook/react/issues/16994#issuecomment-538020954
+
 ## Exercise
 
 TODO
