bunches of updats

--- a/src/exercises/01.md
+++ b/src/exercises/01.md
@@ -7,4 +7,86 @@ app. Say for example that we're building a complex dashboard application that
 includes the venerable d3 library for graphing data. Your users start
 complaining because it takes too long to load the login screen.
 
+So, assuming that performance problems can be resolved by less code, how can we
+solve this one? Well, do we really _need_ to have that code for the chart when
+the user loads the login screen? Nope! We could load that on-demand.
+
+Luckily for us, there's a built-in way to do this with JavaScript standards.
+It's called a dynamic import and the syntax looks like this:
+
+```javascript
+import('/some-module.js').then(
+  module => {
+    // do stuff with the module's exports
+  },
+  error => {
+    // there was some error loading the module...
+  },
+)
+```
+
+To take this further, React has built-in support for loading modules as React
+components. The module must have a React component as the default export, and
+you have to use the `<React.Suspense />` component to render a fallback value
+while the user waits for the module to be loaded.
+
+```javascript
+// smiley-face.js
+import React from 'react'
+
+function SmileyFace() {
+  return <div>😃</div>
+}
+
+export default SmileyFace
+
+// app.js
+import React from 'react'
+
+const SmileyFace = React.lazy(() => import('./smiley-face'))
+
+function App() {
+  return (
+    <div>
+      <React.Suspense fallback={<div>loading...</div>}>
+        <SmileyFace />
+      </React.Suspense>
+    </div>
+  )
+}
+```
+
 ## Exercise
+
+Our app has a `<textarea />`, and get this: you can type WHATEVER. YOU. WANT.
+Cool right? And to make it even cooler, we also put it in this cool box that
+moves around with your cursor. It's super duper fun.
+
+But one day our product manager 🕴 came along and said that users are
+complaining the app is taking too long to load. We're using a library called
+`vanilla-tilt` to have a really cool effect, but users only need to load it if
+they click the "show tilt" button and loading it ahead of time makes the app
+load slower.
+
+So your job as a performance professional is to load the code on-demand so the
+user doesn't have to wait.
+
+For this one, you'll need to open the final in isolation and open the Chrome
+DevTools Network tab to watch the webpack chunk load when you click "show tilt."
+Your objective is to have the network load that same chunk so vanilla-tilt isn't
+in the bundle to begin with.
+
+## Extra Credit
+
+### 💯 eager loading
+
+So it's great that the users can get the app loaded faster, but it's annoying
+when 99% of the time the reason the users are using the app is so they can
+interact with our textarea. We don't want to have to make them wait first to
+load the app and then again to load vanilla-tilt. Wouldn't it be cool if we
+could have vanilla-tilt load in the background after the user sees the app in
+the first place?
+
+See if you can make that work.
+
+💰 Hint: you'll use `React.useEffect`
