fixup a few things

--- a/src/exercises/04.md
+++ b/src/exercises/04.md
@@ -2,24 +2,8 @@
 
 ## Background
 
-Here's what happens when there's a state update in your app:
-
-```
-render → reconcilitation → commit
-      ↖                   ↙
-           state change
-```
-
-Let's define a few terms:
-
-- The "render" phase: create React elements React.createElement
-- The "reconciliation" phase: compare previous elements with the new ones
-- The "commit" phase: update the DOM (if needed).
-
-React exists in its current form (in large part) because updating the DOM is the
-slowest part of this process. By separating us from the DOM, React can perform
-the most surgically optimal updates to the DOM to speed things up for us
-big-time.
+As we learned in the last exercise, React is really optimized at updating the
+DOM during the commit phase.
 
 Unfortunately, there's not much React can do if you simply need to make **huge**
 updates to the DOM. And as fast as React is in the reconciliation phase, if it
