--- a/src/exercises/05.md
+++ b/src/exercises/05.md
@@ -37,13 +37,12 @@ performance and maintenance of our app at the same time.
 For more on this, you can read my blogpost
 [State Colocation will make your React app faster](https://kcd.im/colocate-state).
 
-> NOTE: this is a fundamental problem with pull-based state management solutions
-> like context and redux. However, MobX is a push-based state management
-> solution. This means that it doesn't matter how much of your app state lives
-> in a single MobX "store," your components will _only_ update when the data
-> they actually _do_ consume changes. That said, colocating state has some
-> maintenance benefits so I wouldn't recommend just putting all of your state in
-> MobX either.
+> NOTE: this is a fundamental problem with state management solutions like
+> context and redux. However, with MobX it doesn't matter how much of your app
+> state lives in a single MobX "store," your components will _only_ update when
+> the data they actually _do_ consume changes. That said, colocating state has
+> some maintenance benefits so I wouldn't recommend just putting all of your
+> state in MobX either.
 
 ## Exercise
 
