--- a/src/exercises/06.md
+++ b/src/exercises/06.md
@@ -1,13 +1,65 @@
-# TODO
+# Optimize context value
 
 ## Background
 
-TODO
+The way that context works is that whenever the provided value changes from one
+render to another, it triggers a re-render of all the consuming components
+(which will re-render whether or not they're memoized).
+
+So take this for example:
+
+```jsx
+const CountContext = React.createContext()
+
+function CountProvider(props) {
+  const [count, setCount] = React.useState(0)
+  const value = [count, setCount]
+  return <CountContext.Provider value={value} {...props} />
+}
+```
+
+Every time the `<CountProvider />` is re-rendered, the `value` is brand new, so
+even though the `count` value itself may stay the same, all component consumers
+will be re-rendered.
+
+This can be problematic in certain scenarios. You can read more about this here:
+https://github.com/kentcdodds/kentcdodds.com/blob/319db97260078ea4c263e75166f05e2cea21ccd1/content/blog/how-to-optimize-your-context-value/index.md
+
+The quick and easy solution to this problem is to memoize the value that you
+provide to the context provider:
+
+```jsx
+const CountContext = React.createContext()
+
+function CountProvider(props) {
+  const [count, setCount] = React.useState(0)
+  const value = React.memo([count, setCount], [count])
+  return <CountContext.Provider value={value} {...props} />
+}
+```
 
 ## Exercise
 
-TODO
+After we fixed the previous performance problem, our 🕴 product manager noticed
+another performance problem. Whenever you click on the "force render" button
+it's slow. See if you can figure out why and fix that by memoizing the context
+value.
+
+Make sure to profile before/after to see whether you actually fixed the problem.
 
 ## Extra Credit
 
-### 💯 TODO
+### 💯 separate the contexts
+
+After we fixed that performance problem with our app, the 🕴 product manager was
+so happy because it was fast enough to add a new feature to the grid. Now you
+can update a single cell by clicking on it. But there's a performance problem
+with that as well. Every single cell in the grid re-renders when we do that. Not
+just the one that was changed!
+
+The reason this is happening is because all the cells consume the provider value
+and when the state changes, they need to be re-rendered. But wait... they don't
+really depend on the part of the value that's changing, right? They only need
+the `dispatch` function. So what if we put the state in one context provider and
+the `dispatch` function in another context provider? Hmm.... Give that a try and
+see if you can get things to run faster.
