--- a/src/exercises/07.md
+++ b/src/exercises/07.md
@@ -1,8 +1,55 @@
-# TODO
+# Production performance monitoring
 
 ## Background
 
-TODO
+We should always ship fast experiences to our users, but sometimes something
+slips through our PR review process and our users start having a slow
+experience. Unless they complain to us, we have no way of knowing that things
+are going so slow for them. User complaints is not a great policy for quality
+control.
+
+Because we can't make every user install the React DevTools and profile the app
+for us as they interact with it, it would be nice if we could somehow track some
+of the render times and get that information sent to our servers for us to
+monitor.
+
+Well, the React team has created an API specifically for this. It doesn't give
+us quite as much information as the React DevTools do, but it does give us some
+useful information.
+
+📜 Read up on the capabilities of the `<React.Profile />` component here:
+https://reactjs.org/docs/profiler.html
+
+Here's a basic usage example:
+
+```jsx
+<App>
+  <Profiler id="Navigation" onRender={onRenderCallback}>
+    <Navigation {...props} />
+  </Profiler>
+  <Main {...props} />
+</App>
+```
+
+The callback is called with the following arguments
+
+```javascript
+function onRenderCallback(
+  id, // the "id" prop of the Profiler tree that has just committed
+  phase, // either "mount" (if the tree just mounted) or "update" (if it re-rendered)
+  actualDuration, // time spent rendering the committed update
+  baseDuration, // estimated time to render the entire subtree without memoization
+  startTime, // when React began rendering this update
+  commitTime, // when React committed this update
+  interactions, // the Set of interactions belonging to this update
+) {
+  // Aggregate or log render timings...
+}
+```
+
+**It's important to note** that unless you build your app using
+`react-dom/profiling` and `scheduler/tracing-profiling` this component wont do
+anything.
 
 > NOTE: The isolated functionality currently has a bug. Subscribe to this to
 > know when that's resolved:
@@ -10,8 +57,11 @@ TODO
 
 ## Exercise
 
-TODO
+We've got a `src/report-profile.js` file which you can pass to the `onRender`
+function and it sends an aggregated report to our "reporting service" every 5
+seconds. You can review the code and read the comments to get a clear picture of
+what it does.
 
-## Extra Credit
-
-### 💯 TODO
+Our 🕴 product manager isn't certain that we can keep a part of our app fast and
+wants to install monitoring for it. So your job is to add performance
+monitoring.
