--- a/src/exercises/01.md
+++ b/src/exercises/01.md
@@ -90,3 +90,12 @@ the first place?
 See if you can make that work.
 
 💰 Hint: you'll use `React.useEffect`
+
+## Notes
+
+Another thing which we wont cover in this workshop, but you should consider, is
+using webpack
+[magic comments](https://webpack.js.org/api/module-methods/#magic-comments)
+which will allow webpack to place common modules in the same chunk. This is good
+for components which you want loaded together in the same chunk (to reduce
+multiple requests for multiple modules which will likely be needed together).
