fix the instructions

--- a/src/exercises/02.md
+++ b/src/exercises/02.md
@@ -76,20 +76,12 @@ does provide a much superior UX). "No!" You argue. "We must have the better UX!"
 There may be ways to optimize `match-sorter` itself, but let's try throwing this
 all into a web worker instead...
 
-Since you've got some extra time, see if you can figure out how to put
-`filter-cities.js` into a web worker. (💰 You don't need to make many changes,
-and _all_ of your changes will be in your exercise file).
+Since you've got some extra time, update the import from
+`import {getItems} from '../filter-cities'` to
+`import {getItems} from '../workerized-filter-cities'` and then you need to
+handle the fact that getItems is asynchronous. (💰 You don't need to make many
+changes, and _all_ of your changes will be in your exercise file).
 
 Because working with web workers is asynchronous, you'll probably want to use
 the `useAsync` utility found in `src/utils.js` (💰 take a peak. It has an
 example for how to use it).
-
-Another thing that can help you a bunch is
-[`workerize-loader`](https://github.com/developit/workerize-loader) which is
-pre-installed into this project. The example should be enough to get you going.
-There's one small problem however. `workerize-loader` doesn't work with
-create-react-app's development server at the moment
-([support is in progress](https://github.com/facebook/create-react-app/issues/7741)).
-So you can either run `npm run build` followed by `npx serve -s build` to test
-this out or you can edit `./node_modules/react-scripts/config/webpack.config.js`
-to set `output.globalObject` to `'this'`.
