respond to feedback

--- a/src/exercises/01.md
+++ b/src/exercises/01.md
@@ -62,7 +62,7 @@ Our app has a `<textarea />`, and get this: you can type WHATEVER. YOU. WANT.
 Cool right? And to make it even cooler, we also put it in this cool box that
 moves around with your cursor. It's super duper fun.
 
-But one day our product manager 🕴 came along and said that users are
+But one day our product manager 👨‍💼 came along and said that users are
 complaining the app is taking too long to load. We're using a library called
 `vanilla-tilt` to have a really cool effect, but users only need to load it if
 they click the "show tilt" button and loading it ahead of time makes the app
@@ -91,11 +91,33 @@ See if you can make that work.
 
 💰 Hint: you'll use `React.useEffect`
 
+### 💯 webpack magic comments
+
+If you're using webpack to bundle your application, then you can use webpack
+[magic comments](https://webpack.js.org/api/module-methods/#magic-comments) to
+have webpack instruct the browser to prefetch dynamic imports:
+
+```javascript
+import(/* webpackPrefetch: true */ './some-module.js')
+```
+
+When webpack sees this comment, it adds this to your document's `head`:
+
+```javascript
+<link rel="prefetch" as="script" href="/static/js/1.chunk.js">
+```
+
+With this, the browser will automatically load this JavaScript file into the
+browser cache so it's ready ahead of time.
+
+The change itself is minimal, but pull up the DevTools to make sure it's loading
+properly (you'll need to uncheck the "Disable cache" button to observe any
+changes).
+
 ## Notes
 
-Another thing which we wont cover in this workshop, but you should consider, is
-using webpack
-[magic comments](https://webpack.js.org/api/module-methods/#magic-comments)
-which will allow webpack to place common modules in the same chunk. This is good
-for components which you want loaded together in the same chunk (to reduce
-multiple requests for multiple modules which will likely be needed together).
+Another thing which we wont cover in this workshop, but you should look into
+later, is using the `webpackChunkName` magic comment which will allow webpack to
+place common modules in the same chunk. This is good for components which you
+want loaded together in the same chunk (to reduce multiple requests for multiple
+modules which will likely be needed together).
