--- a/src/exercises/02.md
+++ b/src/exercises/02.md
@@ -65,12 +65,15 @@ changes.
 
 ### 💯 Put getItems into a Web Worker
 
-> Warning, this one's _really_ cool, but kinda tricky...
+> Warning, this one's _really_ cool, but kinda tricky... Also, the intent isn't
+> necessarily for you to learn web workers, but just to expose you to a good use
+> case for them. You can get started learning about web workers here:
+> https://kentcdodds.com/blog/speed-up-your-app-with-web-workers
 
 It's awesome that we reduced how often we have to call `getItems`,
 unfortunately, on low-powered devices, `getItems` is still quite slow when it
 actually _does_ need to run and we'd like to speed it up. So the product manager
-🕴 decided that we need to ditch `match-sorter` in favor of a simple string
+👨‍💼 decided that we need to ditch `match-sorter` in favor of a simple string
 `includes` because the experience is not fast enough (even though `match-sorter`
 does provide a much superior UX). "No!" You argue. "We must have the better UX!"
 There may be ways to optimize `match-sorter` itself, but let's try throwing this
@@ -85,3 +88,8 @@ changes, and _all_ of your changes will be in your exercise file).
 Because working with web workers is asynchronous, you'll probably want to use
 the `useAsync` utility found in `src/utils.js` (💰 take a peak. It has an
 example for how to use it).
+
+Note also: For this one, to really get a sense of the performance improvements,
+you'll want to run the DevTools profiler on the production build of the app. Run
+`npm run build` and `npm run serve`. Remember that you'll need to rerun the
+build every time you make a change.
