--- a/src/exercises/03.md
+++ b/src/exercises/03.md
@@ -132,7 +132,7 @@ In this exercise, pull up the React DevTools and observe when you click the
 all re-rendered even though no DOM updates were needed. This is an unnecessary
 re-render and a bottleneck in our application (especially if we want to start
 showing all of the results rather than just the first 100... I've heard rumors
-that the product manager 🕴 wants us to do that). If you enable 6x throttle on
+that the product manager 👨‍💼 wants us to do that). If you enable 6x throttle on
 the CPU (under the Performance tab in Chrome DevTools) then you'll notice the
 issue is more stark.
 
