--- a/src/exercises/04.md
+++ b/src/exercises/04.md
@@ -88,7 +88,7 @@ lists.
 
 ## Exercise
 
-🕴 The product manager noticed that we're only rendering the top 100 matches and
+👨‍💼 The product manager noticed that we're only rendering the top 100 matches and
 they're frustrated because they like scrolling for eternity. We tried to explain
 to them about React's reconciliation and commit phases, but they just smiled,
 gave us a high five and said "You're smart! I'm sure you can do this!"
