--- a/src/exercises/07.md
+++ b/src/exercises/07.md
@@ -62,6 +62,6 @@ function and it sends an aggregated report to our "reporting service" every 5
 seconds. You can review the code and read the comments to get a clear picture of
 what it does.
 
-Our 🕴 product manager isn't certain that we can keep a part of our app fast and
+Our 👨‍💼 product manager isn't certain that we can keep a part of our app fast and
 wants to install monitoring for it. So your job is to add performance
 monitoring.
