--- a/src/exercises/05.md
+++ b/src/exercises/05.md
@@ -79,13 +79,23 @@ undo all your work so far and start over from scratch to implement this.
 
 ### 💯 limit the work consuming components do
 
+If you open up the React DevTools Profiler and click "force rerender" then
+you'll notice that the `ChangingGrid` takes quite a bit of time on its own that
+was ultimately wasted because there were no actual DOM updates.
+
 An alternative solution is to limit the amount of work consuming components have
 to do and make it easier to determine whether a component needs to update. So we
-know that the `grid` variable isn't actually changing when the `state` changes,
-so what if we make the `ChangingGrid` actually accept a `grid` prop and then put
+know that the `grid` variable isn't actually changing when the `state` changes.
+The `grid` property of `state` is all that matters for the `ChangingGrid`, so we
+only need to re-render the `ChangingGrid` if that state changes.
+
+So what if we make the `ChangingGrid` actually accept a `grid` prop and then put
 a middle-man component in there that does the actual consuming of
-`useAppState()`. That way if there's a state update, memoization isn't broken
-when the `grid` is unchanged.
+`useAppState()`. We could rename the `ChangingGrid` component to
+`ChangingGridImpl` (Impl is short for "implementation"). And then the middle-man
+component could be called `ChangingGrid`. That way if there's a state update,
+`ChangingGrid` is re-rendered, and it forwards the `grid` to `ChangingGridImpl`
+which is memoized and will therefore only re-render when `grid` changes.
 
 You may find it easier to just undo all your work so far and start over from
 scratch to implement this.
