--- a/src/exercises/04.md
+++ b/src/exercises/04.md
@@ -95,7 +95,7 @@ lists.
 
 ## Exercise
 
-👨‍💼 The product manager noticed that we're only rendering the top 100 matches and
+👻 The product manager noticed that we're only rendering the top 100 matches and
 they're frustrated because they like scrolling for eternity. We tried to explain
 to them about React's reconciliation and commit phases, but they just smiled,
 gave us a high five and said "You're smart! I'm sure you can do this!"
@@ -107,8 +107,8 @@ ahead and try doing some profiling if you like, but I think you know what you
 need to do. You need to window this stuff! Run less code, and speed up your
 component.
 
-Note that 💰 Marty the Money Bag has done a tiny bit of work for you that's
-specific to how you integrate Downshift and react-window. He's done a good job
+Note that 🧟 Zack the Zombie has done a tiny bit of work for you that's specific
+to how you integrate Downshift and react-window. He's done a good job
 documenting what he's done so you can read about the changes he made if you
-want. 🐨 Kody the Koala Bear will be there to help you know what changes you
-need to make. Good luck!
+want. 🎃 Jack the Jack-o'-lantern will be there to help you know what changes
+you need to make. Good luck!
